Fixed mobile layout problem.

--- a/css/web.css
+++ b/css/web.css
@@ -20,6 +20,7 @@
     position: absolute;
     right: 0;
     top: 0;
+    z-index: -1;
 }
 
 .textarea {
@@ -300,10 +301,6 @@ a.btn:hover {
     .r2 .wp content {
         width: 31.5%;
     }
-
-    .r2 .wp content:nth-child(2) img {
-        object-position: 71%;
-    }
 }
 
 @media(max-width:950px) {
@@ -334,12 +331,6 @@ a.btn:hover {
 
     .r2 .wp2 content:nth-child(1) img {
         object-position: center;
-    }
-
-
-
-    .r2 .wp content:nth-child(3) img {
-        object-position: 10%;
     }
 }
 
@@ -384,6 +375,7 @@ a.btn:hover {
 @media(max-width:630px) {
     .r2 .wp content {
         margin: 10px 3px 0;
+        overflow: hidden;
     }
 
     .r1 .wp img, .r1 .wp p {
@@ -451,7 +443,6 @@ a.btn:hover {
 
 @media(max-width:414px) {
     .r2 .wp content img {
-        width: 300px;
         height: 250px;
     }
 
